--- a/index.html
+++ b/index.html
@@ -133,13 +133,12 @@
                 10
               </div>
             </div>
-            <div class='footer'>
-              <a class='reload' href='#'>
-                <i class='fa fa-refresh fa-4x'></i>
-              </a>
-              <div class='next'>
-                <i class='fa fa-share fa-4x'></i>
-              </div>
+            <div class='footer'></div>
+            <a class='reload' href='#'>
+              <i class='fa fa-refresh fa-4x'></i>
+            </a>
+            <div class='next'>
+              <i class='fa fa-share fa-4x'></i>
             </div>
           </div>
           <div class='screen' id='sec_numbers_s2'>
@@ -207,13 +206,12 @@
                 10
               </div>
             </div>
-            <div class='footer'>
-              <a class='reload' href='#'>
-                <i class='fa fa-refresh fa-4x'></i>
-              </a>
-              <div class='next'>
-                <i class='fa fa-share fa-4x'></i>
-              </div>
+            <div class='footer'></div>
+            <a class='reload' href='#'>
+              <i class='fa fa-refresh fa-4x'></i>
+            </a>
+            <div class='next'>
+              <i class='fa fa-share fa-4x'></i>
             </div>
           </div>
           <div class='screen' id='sec_numbers_s3'>
@@ -281,13 +279,85 @@
                 10
               </div>
             </div>
-            <div class='footer'>
-              <a class='reload' href='#'>
-                <i class='fa fa-refresh fa-4x'></i>
-              </a>
-              <div class='next'>
-                <i class='fa fa-share fa-4x'></i>
+            <div class='footer'></div>
+            <a class='reload' href='#'>
+              <i class='fa fa-refresh fa-4x'></i>
+            </a>
+            <div class='next'>
+              <i class='fa fa-share fa-4x'></i>
+            </div>
+          </div>
+          <div class='screen' id='sec_numbers_s4'>
+            <div class='final_container'>
+              <div class='active' data_id='1'>
+                1
               </div>
+              <div data_id='2'>
+                2
+              </div>
+              <div data_id='3'>
+                3
+              </div>
+              <div data_id='4'>
+                4
+              </div>
+              <div data_id='5'>
+                5
+              </div>
+              <div data_id='6'>
+                6
+              </div>
+              <div data_id='7'>
+                7
+              </div>
+              <div data_id='8'>
+                8
+              </div>
+              <div data_id='9'>
+                9
+              </div>
+              <div data_id='10'>
+                10
+              </div>
+            </div>
+            <div class='start_container'>
+              <div class='active' data_id='1' href='http://void/1'>
+                1
+              </div>
+              <div class='active' data_id='2' href='http://void/2'>
+                2
+              </div>
+              <div class='active' data_id='3' href='http://void/3'>
+                3
+              </div>
+              <div class='active' data_id='4' href='http://void/4'>
+                4
+              </div>
+              <div class='active' data_id='5' href='http://void/5'>
+                5
+              </div>
+              <div class='active' data_id='6' href='http://void/6'>
+                6
+              </div>
+              <div class='active' data_id='7' href='http://void/7'>
+                7
+              </div>
+              <div class='active' data_id='8' href='http://void/8'>
+                8
+              </div>
+              <div class='active' data_id='9' href='http://void/9'>
+                9
+              </div>
+              <div class='active' data_id='10' href='http://void/10'>
+                10
+              </div>
+            </div>
+            <div class='footer'></div>
+            <a class='reload' href='#'>
+              <i class='fa fa-refresh fa-4x'></i>
+            </a>
+            <div class='next'>
+              <i class='fa fa-share fa-4x'></i>
             </div>
           </div>
         </div>
